--- a/src/app.json
+++ b/src/app.json
@@ -15,13 +15,16 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "permissions": ["CAMERA", "CAMERA_ROLL"]
+      
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": ["CAMERA", "CAMERA_ROLL"]
     },
     "web": {
       "favicon": "./assets/favicon.png"
