--- a/src/package.json
+++ b/src/package.json
@@ -11,13 +11,14 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.6.1",
     "expo": "~49.0.15",
     "expo-barcode-scanner": "^12.7.0",
+    "expo-camera": "~13.4.4",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-camera": "^4.2.1",
-    "expo-camera": "~13.4.4"
+    "react-native-camera": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
