barcode scanner almost done

--- a/src/package.json
+++ b/src/package.json
@@ -15,13 +15,17 @@
     "expo": "~49.0.15",
     "expo-barcode-scanner": "^12.7.0",
     "expo-camera": "~13.4.4",
+    "expo-constants": "^14.4.2",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-camera": "^4.2.1"
+    "react-native-camera": "^4.2.1",
+    "react-native-image-size": "^1.1.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "metro-react-native-babel-preset": "^0.77.0",
+    "react-native-dotenv": "^3.4.9"
   },
   "private": true
 }
