--- a/src/package.json
+++ b/src/package.json
@@ -21,7 +21,7 @@
     "react-native": "0.72.6",
 
     "react-native-camera": "^4.2.1",
-    "react-native-image-size": "^1.1.6"
+    "react-native-image-size": "^1.1.6",
 
     "react-native-progress": "^5.0.1",
     "react-native-svg": "13.9.0"
