--- a/src/package.json
+++ b/src/package.json
@@ -19,13 +19,11 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
-
     "react-native-camera": "^4.2.1",
-    "react-native-image-size": "^1.1.6"
-
+    "react-native-image-size": "^1.1.6",
     "react-native-progress": "^5.0.1",
-    "react-native-svg": "13.9.0"
-
+    "react-native-svg": "^13.9.0",
+    "react-native-vector-icons": "^10.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
