--- a/src/package.json
+++ b/src/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@firebase/auth": "^1.4.0",
+    "@firebase/firestore": "^4.3.2",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.1",
