--- a/src/package.json
+++ b/src/package.json
@@ -24,7 +24,8 @@
     "react-native-image-size": "^1.1.6",
     "react-native-progress": "^5.0.1",
     "react-native-svg": "^13.9.0",
-    "react-native-vector-icons": "^10.0.2"
+    "react-native-vector-icons": "^10.0.2",
+    "react-native-maps": "1.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
