--- a/src/package.json
+++ b/src/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-camera": "^4.2.1",
+    "react-native-gesture-handler": "^2.14.0",
     "react-native-image-size": "^1.1.6",
     "react-native-maps": "1.7.1",
     "react-native-progress": "^5.0.1",
