--- a/src/package.json
+++ b/src/package.json
@@ -19,12 +19,14 @@
     "expo-barcode-scanner": "^12.7.0",
     "expo-camera": "~13.4.4",
     "expo-constants": "^14.4.2",
+    "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-camera": "^4.2.1",
     "react-native-image-size": "^1.1.6",
     "react-native-maps": "1.7.1",
+    "react-native-open-maps": "^0.4.3",
     "react-native-progress": "^5.0.1",
     "react-native-stars": "^1.2.2",
     "react-native-svg": "^13.9.0",
