--- a/src/package.json
+++ b/src/package.json
@@ -12,26 +12,31 @@
     "@firebase/auth": "^1.4.0",
     "@firebase/firestore": "^4.3.2",
     "@react-native-async-storage/async-storage": "^1.19.8",
+    "@react-native-community/voice": "^1.1.9",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.1",
     "expo": "~49.0.15",
+    "expo-av": "^13.6.0",
     "expo-barcode-scanner": "^12.7.0",
     "expo-camera": "~13.4.4",
     "expo-constants": "^14.4.2",
     "expo-location": "~16.1.0",
+    "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-google-cloud-speech-to-text": "^0.5.4",
     "react-native-image-size": "^1.1.6",
     "react-native-maps": "1.7.1",
     "react-native-open-maps": "^0.4.3",
     "react-native-progress": "^5.0.1",
     "react-native-stars": "^1.2.2",
     "react-native-svg": "^13.9.0",
-    "react-native-vector-icons": "^10.0.2"
+    "react-native-vector-icons": "^10.0.2",
+    "react-native-voice": "^0.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
