--- a/src/package.json
+++ b/src/package.json
@@ -15,18 +15,21 @@
     "@react-native-community/voice": "^1.1.9",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "assemblyai": "^3.1.3",
     "axios": "^1.6.1",
     "expo": "~49.0.15",
     "expo-av": "^13.6.0",
     "expo-barcode-scanner": "^12.7.0",
     "expo-camera": "~13.4.4",
     "expo-constants": "^14.4.2",
+    "expo-file-system": "~15.4.5",
     "expo-location": "~16.1.0",
     "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-camera": "^4.2.1",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-google-cloud-speech-to-text": "^0.5.4",
     "react-native-image-size": "^1.1.6",
