--- a/src/package.json
+++ b/src/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@firebase/auth": "^1.4.0",
     "@firebase/firestore": "^4.3.2",
     "@react-native-async-storage/async-storage": "^1.19.8",
