--- a/src/package.json
+++ b/src/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@firebase/auth": "^1.4.0",
     "@firebase/firestore": "^4.3.2",
+    "@firebase/storage": "^0.12.0",
     "@react-native-async-storage/async-storage": "^1.19.8",
     "@react-native-community/voice": "^1.1.9",
     "@react-navigation/native": "^6.1.9",
@@ -34,8 +35,10 @@
     "react-native-google-cloud-speech-to-text": "^0.5.4",
     "react-native-image-size": "^1.1.6",
     "react-native-maps": "1.7.1",
+    "react-native-network-info": "^5.2.1",
     "react-native-open-maps": "^0.4.3",
     "react-native-progress": "^5.0.1",
+    "react-native-public-ip": "^1.0.2",
     "react-native-stars": "^1.2.2",
     "react-native-svg": "^13.9.0",
     "react-native-vector-icons": "^10.0.2",
