--- a/src/package.json
+++ b/src/package.json
@@ -13,6 +13,7 @@
     "@firebase/auth": "^1.4.0",
     "@firebase/firestore": "^4.3.2",
     "@react-native-async-storage/async-storage": "^1.19.8",
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.1",
@@ -27,6 +28,7 @@
     "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-image-size": "^1.1.6",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "1.7.1",
     "react-native-open-maps": "^0.4.3",
     "react-native-progress": "^5.0.1",
